--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,3 +1,9 @@
+:root {
+    --text-color: #333;    
+    --button-primary-color: #333;
+    --button-primary-color-disabled: #666;
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
 }
@@ -5,7 +11,7 @@
 html {
     font-size: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #333;
+    color: var(--text-color);
 }
 
 h1, h2, h3, h4, h5, p {
@@ -79,11 +85,25 @@ header > div {
     text-decoration: none;
     color: inherit;
     height: 2em;
-    width: 2em;
+    /* width: 2em; */
 
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+}
+
+.button.button--solid {
+    background-color: var(--button-primary-color);
+    color: white;
+    /* text-transform: uppercase;
+    font-size: 0.875em;
+    height: auto;
+    padding: 1em; */
+}
+
+.button.button--solid:disabled, .button.button--solid.is-disabled {
+    background-color: var(--button-primary-color-disabled);
+    cursor: not-allowed;
 }
 
 .button.button--circle {
@@ -141,8 +161,9 @@ header > div {
 }
 
 .counter {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
+    width: 2em;
 }
 
 .counter .counter__inner {
@@ -152,4 +173,49 @@ header > div {
     /* padding: 0.5em; */
     font-size: 1.25em;
     padding: 0.5em 0em;
+}
+
+.radiobutton {
+    position: relative;
+    box-sizing: initial;
+    display: inline-block;
+    width: 1em;
+    height: 1em;    
+    border-radius: 50%;
+    border: 2px solid var(--text-color);
+    line-height: 1em;
+}
+
+.radiobutton::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0, 0);
+    content: '';
+    width: 0.75em;
+    height: 0.75em;    
+    border-radius: 50%;
+    display: inline-block;    
+    background-color: var(--text-color);
+    line-height: 1em;
+    transition: transform 100ms ease-out;
+}
+
+.radiobutton.is-selected::after {
+    transform: translate(-50%, -50%) scale(1, 1);
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 4em;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    background-color: white;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
